--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,8 @@
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/o2o?useUnicode=true&characterEncoding=utf8
-jdbc.username=root
-jdbc.password=makethechange123
+jdbc.master.driver=com.mysql.cj.jdbc.Driver
+jdbc.master.url=jdbc:mysql://localhost:10001/o2o?useUnicode=true&characterEncoding=utf8
+jdbc.master.username=root
+jdbc.master.password=make1234
+jdbc.slave.driver=com.mysql.cj.jdbc.Driver
+jdbc.slave.url=jdbc:mysql://localhost:10002/o2o?useUnicode=true&characterEncoding=utf8
+jdbc.slave.username=root
+jdbc.slave.password=make1234
