--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,4 +23,77 @@
         <!--url匹配规则，所有的url转给dispatcherServlet处理-->
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+
+    <!--Kaptcha验证码servlet-->
+    <servlet>
+        <servlet-name>Kaptcha</servlet-name>
+        <servlet-class>com.google.code.kaptcha.servlet.KaptchaServlet</servlet-class>
+        <!--是否有边框-->
+        <init-param>
+            <param-name>kaptcha.border</param-name>
+            <param-value>no</param-value>
+        </init-param>
+        <!--字体颜色-->
+        <init-param>
+            <param-name>kaptcha.textproducer.font.color</param-name>
+            <param-value>red</param-value>
+        </init-param>
+        <!--图片宽度-->
+        <init-param>
+            <param-name>kaptcha.image.width</param-name>
+            <param-value>135</param-value>
+        </init-param>
+        <!--使用哪些字符来生成验证码-->
+        <init-param>
+            <param-name>kaptcha.textproducer.char.string</param-name>
+            <param-value>ACDEFHKPRSTWX345679</param-value>
+        </init-param>
+        <!--图片高度-->
+        <init-param>
+            <param-name>kaptcha.image.height</param-name>
+            <param-value>50</param-value>
+        </init-param>
+        <!--字体大小-->
+        <init-param>
+            <param-name>kaptcha.textproducer.font.size</param-name>
+            <param-value>43</param-value>
+        </init-param>
+        <!--干扰线的颜色-->
+        <init-param>
+            <param-name>kaptcha.noise.color</param-name>
+            <param-value>black</param-value>
+        </init-param>
+        <!--字符个数-->
+        <init-param>
+            <param-name>kaptcha.textproducer.char.length</param-name>
+            <param-value>4</param-value>
+        </init-param>
+        <!--字体-->
+        <init-param>
+            <param-name>kaptcha.textproducer.font.names</param-name>
+            <param-value>Arial</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Kaptcha</servlet-name>
+        <url-pattern>/Kaptcha</url-pattern>
+    </servlet-mapping>
+
+    <!--html中文乱码，有助于解决-->
+    <filter>
+        <filter-name>encodingFilter</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+        <init-param>
+            <param-name>forceEncoding</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>encodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 </web-app>
