用户前台搭建完毕（/o2o/frontend/index进入） 1.主要查看首页店铺一级类别 2.点击一级类别查看属于该一级类别的店铺列表（分页采用SUI-MOBILE的无限滚动进行分页） 3.用户可通过店铺二级类别button、店铺名、区域进行搜索店铺 4.点击店铺可进入店铺详情页（详情页有店铺基本信息、店铺商品类别、店铺商品类别，同样用户可通过商品类别button和商品名检索该店铺商品） 5.点击店铺商品，进入商品详情页（展示商品描述、商品缩略图和详情图）

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
     <groupId>org.imooc</groupId>
     <artifactId>o2o</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <!--打包方式-->
+    <packaging>jar</packaging>
 
     <dependencies>
         <!--spring相关、测试相关、mysql、mybatis-->
@@ -160,6 +162,8 @@
 
 
     <build>
+        <!--打包成jar包的名称-->
+        <finalName>o2o</finalName>
         <plugins>
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
@@ -179,13 +183,22 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.0</version>
+                <version>3.1</version>
                 <configuration>
                     <!--该项目使用的jdk版本-->
                     <source>1.8</source>
                     <target>1.8</target>
                     <encoding>UTF8</encoding>
                     <useIncrementalCompilation>false</useIncrementalCompilation>
+                </configuration>
+            </plugin>
+            <plugin>
+                <!--排除测试类对打包的干扰-->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.16</version>
+                <configuration>
+                    <testFailureIgnore>true</testFailureIgnore>
                 </configuration>
             </plugin>
         </plugins>
