--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,16 +10,16 @@
     </welcome-file-list>
 
     <servlet>
-        <servlet-name>spring-dispatcher</servlet-name>
+        <servlet-name>spring-dispatcher1</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <!--将dao、service、web整合-->
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath:spring/spring-*.xml</param-value>
+            <param-value>classpath*:spring/spring-*.xml</param-value>
         </init-param>
     </servlet>
     <servlet-mapping>
-        <servlet-name>spring-dispatcher</servlet-name>
+        <servlet-name>spring-dispatcher1</servlet-name>
         <!--url匹配规则，所有的url转给dispatcherServlet处理-->
         <url-pattern>/</url-pattern>
     </servlet-mapping>
